--- a/src/SConscript
+++ b/src/SConscript
@@ -16,9 +16,10 @@ LIBPATH="$SECURITY_TRANSFORMS_HOME/lib"
 LIBS=Split("")
 
 myenv=myenv.Clone(CPPPATH=Split(cpppath))
-myenv.Append(CXXFLAGS = " -std=c++11 -Wall -Werror -fmax-errors=2")
+myenv.Append(CXXFLAGS = " -std=c++11 -Wall -Werror -fmax-errors=1")
 
 lib=myenv.Library("ehp",  Split(files), LIBPATH=LIBPATH, LIBS=LIBS)
-Default(lib)
+install=myenv.Install("../lib/", lib)
+Default(install)
 
-Return('lib')
+Return('install')
