--- a/test/SConstruct
+++ b/test/SConstruct
@@ -1,5 +1,5 @@
 
-#   Copyright 2017-2018 Zephyr Software, LLC
+#   Copyright 2017-2018 University of Virginia
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
