--- a/src/SConscript
+++ b/src/SConscript
@@ -33,8 +33,14 @@ LIBS=Split("")
 myenv=myenv.Clone(CPPPATH=Split(cpppath))
 myenv.Append(CXXFLAGS = " -std=c++11 -Wall -Werror -fmax-errors=2 -fPIC ")
 
-lib=myenv.Library("ehp",  Split(files), LIBPATH=LIBPATH, LIBS=LIBS)
-install=myenv.Install("../lib/", lib)
-Default(install)
+lib1=myenv.Library("ehp",  Split(files), LIBPATH=LIBPATH, LIBS=LIBS)
+install1=myenv.Install("../lib/", lib1)
+Default(install1)
+
+lib2=myenv.SharedLibrary("ehp",  Split(files), LIBPATH=LIBPATH, LIBS=LIBS)
+install2=myenv.Install("../lib/", lib2)
+Default(install2)
+
+install=install1+install2
 
 Return('install')
