--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third-party/elfio-code"]
 	path = third-party/elfio-code
-	url = https://git.code.sf.net/p/elfio/code
+	url = git@git.zephyr-software.com:third-party-mirrors/ELFIO.git
