--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,15 @@ PROJECT(ehp)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+option(USE_ELFIO "Use the elfio library to parse elf files" OFF)
+if(USE_ELFIO)
+   add_definitions(-DUSE_ELFIO)
+endif()
+
 # Use C++17
 set(CMAKE_CXX_STANDARD 17)
 # Error if it's not available
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 
 # Base include path for ehp
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
