--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 option(USE_ELFIO "Use the elfio library to parse elf files" OFF)
 if(USE_ELFIO)
    add_definitions(-DUSE_ELFIO)
+   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third-party/elfio-code/)
 endif()
 
 # Use C++17
