--- a/src/SConscript
+++ b/src/SConscript
@@ -26,20 +26,10 @@ cpppath='''
 	'''
 cpppath=cpppath+Dir('.').srcnode().abspath+'/../third-party/elfio-code'
 
-AddOption('--no_elfio',
-          dest='no_elfio',
-          action='store_true',
-          default=False,
-          help='Do not use Elfio library to parse elf files')
-
-cpp_defines={}
-if( not GetOption('no_elfio')):
-    cpp_defines['USE_ELFIO']=1
-
 LIBPATH="$SECURITY_TRANSFORMS_HOME/lib"
 LIBS=Split("")
 
-myenv=myenv.Clone(CPPPATH=Split(cpppath),CPPDEFINES=cpp_defines)
+myenv=myenv.Clone(CPPPATH=Split(cpppath))
 myenv.Append(CXXFLAGS = " -std=c++11 -Wall -Werror -fmax-errors=2 -fPIC ")
 
 lib1=myenv.Library("ehp",  Split(files), LIBPATH=LIBPATH, LIBS=LIBS)
