--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,10 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 option(USE_ELFIO "Use the elfio library to parse elf files" OFF)
 if(USE_ELFIO)
-   add_definitions(-DUSE_ELFIO)
+   add_definitions(-DUSE_ELFIO=1)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third-party/elfio-code/)
+ else()
+   add_definitions(-DUSE_ELFIO=0)
 endif()
 
 # Use C++17
