--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ do-build-ubuntu18:
 # Testing
 #
 do-test-ubuntu18:
-  stage: build
+  stage: test
   script:
     - ./cicd_testing/do-test.sh
   tags:
@@ -49,7 +49,7 @@ do-test-ubuntu18:
 # Turbo Fuzzing
 #
 do-fuzz-ubuntu18:
-  stage: build
+  stage: fuzz
   script:
     - ./cicd_testing/do-fuzz.sh
   tags:
@@ -59,7 +59,7 @@ do-fuzz-ubuntu18:
 # Deploy
 #
 do-deploy-ubuntu18:
-  stage: build
+  stage: deploy
   script:
     - ./cicd_testing/do-deploy.sh
   tags:
