--- a/cicd_testing/afl.yaml
+++ b/cicd_testing/afl.yaml
@@ -1,6 +1,6 @@
 name: 'baseline afl config'
-fuzzing-time: '120 minutes'
+fuzzing-time: '10 minutes'
 input-timeout: '30 seconds'
 memory-limit: '50 MB'
 num-cores: 2
-working-dir:  /tmp/afl
+working-dir:  /tmp/libehp-fuzzing
